<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CampsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/child_tab"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gyerekek" />

            <android.support.design.widget.TabItem
                android:id="@+id/camp_tab"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/taborok" />

            <android.support.design.widget.TabItem
                android:id="@+id/email_tab"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

</android.support.constraint.ConstraintLayout>