<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CampActivity">
    <!--
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints,ScrollViewSize"
        android:scrollbars="horizontal"
        android:gravity="center"
        android:stretchColumns="*"
        android:layout_marginHorizontal="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/name"
                android:textColor="#000000"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:layout_span="3"
                android:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="40dp">
            <TextView
                android:id="@+id/from"
                android:textColor="#000000"
                android:textSize="25sp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
            <TextView
                android:id="@+id/sign"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="-"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
            <TextView
                android:id="@+id/till"
                android:textColor="#000000"
                android:textSize="25sp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" >
            <TextView
                android:id="@+id/placeDesc"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/helyszin"
                android:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
            <TextView
                android:id="@+id/place"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="25dp" >
            <TextView
                android:id="@+id/priceDesc"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/ar"
                android:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
            <TextView
                android:id="@+id/price"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" >
            <TextView
                android:id="@+id/description"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="3"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >
            <TextView
                android:id="@+id/campersDesc"
                android:textColor="#000000"
                android:textSize="25sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/taborozok"
                android:layout_span="3"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow>
            <ListView
                android:id="@+id/simpleListView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true"
                android:divider="#0F2E08"
                android:layout_span="3"
                android:dividerHeight="1dp"
                android:scrollbars="horizontal" />
        </TableRow>

    </TableLayout>
    <!--</ScrollView>-->
</android.support.constraint.ConstraintLayout>