<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints,ScrollViewSize"
        android:scrollbars="horizontal"
        android:gravity="center"
        android:stretchColumns="*"
        android:layout_marginHorizontal="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif-black"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:layout_span="2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/birthDate"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/rank"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/yearDescription"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/evfolyam"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/year"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/foodSensitivity"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

<!--Parent-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <TextView
            android:id="@+id/parent"
            android:textColor="#000000"
            android:fontFamily="sans-serif-black"
            android:textSize="25sp"
            android:text="@string/szulo_adatai"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/parentName"
                android:textColor="#000000"
                android:fontFamily="sans-serif-black"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/parentPhone"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/parentEmail"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/parentAddress"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/parentJob"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/otherDescription"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/egyeb_tudnivalok"
                android:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/other"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_span="2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>
    </TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>